--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>resume</title>
   </head>
-  <body>
+  <body class="colorbg">
     <noscript>
       <strong>We're sorry but resume doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
